# ITR-UI

./: .dockerignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  actions.py  charts.py  layout.py  ui.py
